cf-templates/vpc.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Creation of a VPC
Parameters:
  VPCCIDR:
    Description: IP Address range for the VPN connected VPC
    Type: String
    Default: 172.31.0.0/16
  AZ1:
    Type: AWS::EC2::AvailabilityZone::Name
  AZ2:
    Type: AWS::EC2::AvailabilityZone::Name

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: !Ref VPCCIDR
      EnableDnsHostnames: True
      EnableDnsSupport: True
      Tags: 
        - Key: Name
          Value:
            !Join
              - '-'
              - - Ref: AWS::StackName
                - 'VPC'
  Subnet1:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: 
        Ref: AZ1
      CidrBlock: 172.31.0.0/20
      MapPublicIpOnLaunch: True
      Tags: 
        - Key: Name
          Value:
            !Join
              - '-'
              - - Ref: AWS::StackName
                - 'Subnet1'
      VpcId: !Ref VPC

  Subnet2:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: 
        Ref: AZ2
      CidrBlock: 172.31.16.0/20
      MapPublicIpOnLaunch: True
      Tags: 
        - Key: Name
          Value:
            !Join
              - '-'
              - - Ref: AWS::StackName
                - 'Subnet2'
      VpcId: !Ref VPC

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Sample security group
      GroupName:
        !Join
          - '-'
          - - Ref: AWS::StackName
            - 'SG'
      Tags: 
        - Key: Name
          Value:
            !Join
              - '-'
              - - Ref: AWS::StackName
                - 'SG'
      VpcId: !Ref VPC

  SGIngressSSH:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Inbound security group rules for SSH
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      GroupId: !Ref SecurityGroup
      SourceSecurityGroupId: !Ref SecurityGroup
  
  SGIngressHTTP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Inbound security group rules for HTTP
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      GroupId: !Ref SecurityGroup
      SourceSecurityGroupId: !Ref SecurityGroup

  SGIngressTCP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Inbound security group rules for TCP
      IpProtocol: tcp
      FromPort: 23000
      ToPort: 23010
      GroupId: !Ref SecurityGroup
      SourceSecurityGroupId: !Ref SecurityGroup

  SGIngressICMP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Inbound security group rules for Ping/ICMP
      IpProtocol: icmp
      FromPort: -1
      ToPort: -1
      GroupId: !Ref SecurityGroup
      SourceSecurityGroupId: !Ref SecurityGroup
  
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: MC-Test-IG

  IGAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: MC-Test-PRT

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  Subnet1RTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref Subnet1

  Subnet2RTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref Subnet2
      
Outputs:
  VPC:
    Description: VPC created
    Value:
      Ref: VPC
  Subnet1:
    Description: Subnet created
    Value:
      Ref: Subnet1
  Subnet2:
    Description: Subnet created
    Value:
      Ref: Subnet2
  SecurityGroup:
    Description: Securty group created
    Value:
      Ref: SecurityGroup
